<resources>
    <string name="app_name">Reveille</string>
    <string name="reveille">Reveille</string>
    <string name="log_in">Log in</string>
    <string name="first_name">First name</string>
    <string name="Reveille">Reveille</string>
    <string name="phone_number_email_or_username">Phone number,email or Username</string>
    <string name="password">Password</string>
    <string name="username">username</string>
    <string name="Username">Username</string>
    <string name="phone_number">Phone_number</string>
    <string name="email_id">Email Id</string>
    <string name="Phone_number">Phone number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="new_user">New user?</string>

    <string name="chats">Chats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Chats">chats</string>
    <string name="groups">Groups</string>
    <string name="login">LOG-IN</string>
    <string name="Register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_message" />
    <string name="send" />
    <string name="ram">Ram</string>
    <string name="number">number</string>
    <string name="message">Message</string>
    <string name="Send">Send</string>
    <string name="todo">TODO</string>
    <string name="UserProfile" />
    <string name="Message">Message</string>
    <string name="_9_11_am">9:11 AM</string>
    <string name="text">Text</string>
    <string name="settings">Settings</string>
    <string name="video">video</string>
    <string name="camera">camera</string>
    <string name="back_button_description">back_button</string>
    <string name="delete">Delete</string>
    <string name="phonenumber">PhoneNumber</string>
</resources>