<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/videocam"
        android:icon="@drawable/video"
        android:title="@string/video"
        app:showAsAction="ifRoom"
        />
     <item android:title="@string/camera"
         android:id="@+id/camera"
         android:icon="@drawable/call"
         app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/delete"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item android:id="@+id/masterpage_settings"
    android:title="@string/settings"
        app:showAsAction="never">
        <menu>

        </menu>

    </item>


</menu>