<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login">


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rabiohead"
        android:gravity="center"
        android:text="@string/Reveille"
        android:textSize="60sp" />




     <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="45dp"
            app:boxBackgroundColor="@color/white"
            app:hintEnabled="false"


         >

         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/person"
             android:drawablePadding="10dp"
             android:hint="@string/phonenumber"
             android:textColorHint="#8a000000"
             android:inputType="phone"
             />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="45dp"
            app:hintEnabled="false"
            app:boxBackgroundColor="@color/white"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"

                android:textColorHint="#8a000000"
                 />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="45dp"
            android:backgroundTint="#3897F0"
            android:fontFamily="@font/open_sans_semibold"
            android:padding="10dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/newUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/new_user"
                android:textAlignment="center"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="false"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/newUser"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/open_sans_semibold"
                android:onClick="register"
                android:text="@string/register"
                android:textColor="#3897F0"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>


</LinearLayout>